// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create snapshot should render and match the snapshot for adding an item 1`] = `
.emotion-0 {
  padding: 0 16px;
  width: 100%;
}

@media (min-width: 768px) {
  .emotion-0 {
    max-width: 960px;
    margin: 48px auto;
  }
}

@media (max-width: 767px) {
  .emotion-0 {
    padding: 16px;
  }
}

.emotion-2 {
  font-family: 'tiempos-head-semibold',georgia,serif;
  font-size: 28px;
  line-height: 1.2;
  margin-top: 0;
}

.emotion-4 {
  padding: 0 16px;
  width: 100%;
  margin: 0;
  background: #ffffff;
  width: auto;
}

@media (min-width: 768px) {
  .emotion-4 {
    max-width: 960px;
    margin: 48px auto;
  }
}

@media (min-width: 768px) {
  .emotion-4 {
    background: #ffffff;
    box-shadow: 0 2px 5px rgba(17, 17, 17, 0.1);
    border-radius: 2px;
    padding: 32px 48px;
  }
}

@media (max-width: 767px) {
  .emotion-4 {
    margin: 0 -16px;
    padding: 16px;
  }
}

.emotion-6 {
  display: block;
  margin-bottom: 16px;
  position: relative;
}

.emotion-8 {
  position: relative;
  color: inherit;
}

.emotion-12 {
  font-weight: bold;
  display: block;
}

.emotion-12:after {
  content: '';
}

.emotion-14 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 0;
  width: 100%;
  border: 0;
  border-bottom: 1px solid #888;
  padding: 5px 0;
  min-height: 40px;
  font-family: inherit;
  font-size: inherit;
  border-bottom-color: inherit;
}

.emotion-14:focus {
  outline: none;
  border-image: linear-gradient(45deg, #4A90E2, #c6aeab) 2;
}

.emotion-16 {
  border: 0;
  position: absolute;
  right: 2px;
  top: 30px;
  background: transparent;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.emotion-16:focus {
  outline: none;
}

.emotion-36 {
  position: relative;
  box-sizing: border-box;
}

.emotion-37 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: hsl(0,0%,100%);
  border-color: hsl(0,0%,80%);
  border-radius: 0;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: all 100ms;
  transition: all 100ms;
  box-sizing: border-box;
  border: 0;
  border-bottom: 1px solid #888;
  padding: 5px 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-37:hover {
  border-color: hsl(0,0%,70%);
}

.emotion-37:hover {
  border-bottom: 1px solid #888;
}

.emotion-38 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
}

.emotion-39 {
  color: hsl(0,0%,50%);
  margin-left: 2px;
  margin-right: 2px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
}

.emotion-40 {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 2px;
  visibility: visible;
  color: hsl(0,0%,20%);
  box-sizing: border-box;
}

.emotion-41 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
}

.emotion-42 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: hsl(0,0%,80%);
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
}

.emotion-43 {
  color: hsl(0,0%,80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.emotion-43:hover {
  color: hsl(0,0%,60%);
}

.emotion-44 {
  display: inline-block;
  fill: currentColor;
  line-height: 1;
  stroke: currentColor;
  stroke-width: 0;
}

.emotion-57 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  min-height: 40px;
  width: 100%;
  border: 0;
  background-color: #101010;
  color: #ffffff;
  padding: 10px 20px;
  border-radius: 4px;
  -webkit-transition: background-color 0.2s ease,box-shadow 0.2s ease,color 0.3s ease;
  transition: background-color 0.2s ease,box-shadow 0.2s ease,color 0.3s ease;
  cursor: pointer;
  font-family: inherit;
  font-size: inherit;
  pointer-events: all;
  margin-left: auto;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  padding: 0 50px;
}

.emotion-60:active,
.emotion-60:hover {
  background-color: #000000;
  color: #ffffff;
}

.emotion-60:focus {
  outline: none;
  box-shadow: 0 0 0 3px #66afe965;
}

.emotion-62 {
  width: 20px;
  height: 20px;
  margin-right: -30px;
  margin-left: 10px;
}

<div
  className="emotion-0 emotion-1"
>
  <h1
    className="emotion-2 emotion-3"
  >
    Add
  </h1>
  <form
    className="emotion-4 emotion-5"
    onSubmit={[Function]}
  >
    <div
      className="emotion-6 emotion-7"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-10 emotion-11"
        >
          <label
            className="emotion-12 emotion-13"
            htmlFor="amount"
          >
            Amount
          </label>
        </div>
        <input
          autoFocus={true}
          className="form-control emotion-14 emotion-15"
          id="amount"
          inputMode="decimal"
          name="amount"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
      <button
        className="emotion-16 emotion-17"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
      >
        <svg
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M12 19c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zM6 1c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12-8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm-6 8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
          />
        </svg>
      </button>
    </div>
    <div
      className="emotion-6 emotion-7"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-10 emotion-11"
        >
          <label
            className="emotion-12 emotion-13"
            htmlFor="description"
          >
            Description
          </label>
        </div>
        <input
          className="form-control emotion-14 emotion-15"
          id="description"
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
    </div>
    <div
      className="emotion-6 emotion-7"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-10 emotion-11"
        >
          <label
            className="emotion-12 emotion-13"
            htmlFor="tags"
          >
            Tags
          </label>
        </div>
        <div
          className="emotion-36"
          id="tags"
          onKeyDown={[Function]}
        >
          <div
            className="emotion-37"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="emotion-38"
            >
              <div
                className="emotion-39"
              >
                Select...
              </div>
              <div
                className="emotion-40"
              >
                <div
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-2-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "label": "input",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className="emotion-41"
            >
              <span
                className="emotion-42"
              />
              <div
                aria-hidden="true"
                className="emotion-43"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="emotion-44"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div>
            <input
              name="tags"
              type="hidden"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-6 emotion-7"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-10 emotion-11"
        >
          <label
            className="emotion-12 emotion-13"
            htmlFor="date"
          >
            Date
          </label>
        </div>
        <input
          className="form-control emotion-14 emotion-15"
          id="date"
          name="date"
          onBlur={[Function]}
          onChange={[Function]}
          type="datetime-local"
        />
      </div>
    </div>
    <footer
      className="emotion-55 emotion-56"
    >
      <div
        className="emotion-57 emotion-58"
      >
        <button
          className="emotion-59 emotion-60 emotion-61"
        >
          Submit
          <div
            className="emotion-62 emotion-63"
          />
        </button>
      </div>
    </footer>
  </form>
</div>
`;

exports[`Create snapshot should render and match the snapshot for editing an item 1`] = `
.emotion-0 {
  padding: 0 16px;
  width: 100%;
}

@media (min-width: 768px) {
  .emotion-0 {
    max-width: 960px;
    margin: 48px auto;
  }
}

@media (max-width: 767px) {
  .emotion-0 {
    padding: 16px;
  }
}

.emotion-2 {
  font-family: 'tiempos-head-semibold',georgia,serif;
  font-size: 28px;
  line-height: 1.2;
  margin-top: 0;
}

.emotion-4 {
  padding: 0 16px;
  width: 100%;
  margin: 0;
  background: #ffffff;
  width: auto;
}

@media (min-width: 768px) {
  .emotion-4 {
    max-width: 960px;
    margin: 48px auto;
  }
}

@media (min-width: 768px) {
  .emotion-4 {
    background: #ffffff;
    box-shadow: 0 2px 5px rgba(17, 17, 17, 0.1);
    border-radius: 2px;
    padding: 32px 48px;
  }
}

@media (max-width: 767px) {
  .emotion-4 {
    margin: 0 -16px;
    padding: 16px;
  }
}

.emotion-6 {
  display: block;
  margin-bottom: 16px;
  position: relative;
}

.emotion-8 {
  position: relative;
  color: inherit;
}

.emotion-12 {
  font-weight: bold;
  display: block;
}

.emotion-12:after {
  content: '';
}

.emotion-14 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 0;
  width: 100%;
  border: 0;
  border-bottom: 1px solid #888;
  padding: 5px 0;
  min-height: 40px;
  font-family: inherit;
  font-size: inherit;
  border-bottom-color: inherit;
}

.emotion-14:focus {
  outline: none;
  border-image: linear-gradient(45deg, #4A90E2, #c6aeab) 2;
}

.emotion-16 {
  border: 0;
  position: absolute;
  right: 2px;
  top: 30px;
  background: transparent;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
}

.emotion-16:focus {
  outline: none;
}

.emotion-36 {
  position: relative;
  box-sizing: border-box;
}

.emotion-37 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: hsl(0,0%,100%);
  border-color: hsl(0,0%,80%);
  border-radius: 0;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 40px;
  outline: 0!important;
  position: relative;
  -webkit-transition: all 100ms;
  transition: all 100ms;
  box-sizing: border-box;
  border: 0;
  border-bottom: 1px solid #888;
  padding: 5px 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-37:hover {
  border-color: hsl(0,0%,70%);
}

.emotion-37:hover {
  border-bottom: 1px solid #888;
}

.emotion-38 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
}

.emotion-39 {
  color: hsl(0,0%,50%);
  margin-left: 2px;
  margin-right: 2px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
}

.emotion-40 {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 2px;
  visibility: visible;
  color: hsl(0,0%,20%);
  box-sizing: border-box;
}

.emotion-41 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
}

.emotion-42 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: hsl(0,0%,80%);
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
}

.emotion-43 {
  color: hsl(0,0%,80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.emotion-43:hover {
  color: hsl(0,0%,60%);
}

.emotion-44 {
  display: inline-block;
  fill: currentColor;
  line-height: 1;
  stroke: currentColor;
  stroke-width: 0;
}

.emotion-57 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-59 {
  font-size: 15px;
  cursor: pointer;
  display: block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: bold;
}

.emotion-62 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  min-height: 40px;
  width: 100%;
  border: 0;
  background-color: #101010;
  color: #ffffff;
  padding: 10px 20px;
  border-radius: 4px;
  -webkit-transition: background-color 0.2s ease,box-shadow 0.2s ease,color 0.3s ease;
  transition: background-color 0.2s ease,box-shadow 0.2s ease,color 0.3s ease;
  cursor: pointer;
  font-family: inherit;
  font-size: inherit;
  pointer-events: all;
  margin-left: auto;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  padding: 0 50px;
}

.emotion-62:active,
.emotion-62:hover {
  background-color: #000000;
  color: #ffffff;
}

.emotion-62:focus {
  outline: none;
  box-shadow: 0 0 0 3px #66afe965;
}

.emotion-64 {
  width: 20px;
  height: 20px;
  margin-right: -30px;
  margin-left: 10px;
}

<div
  className="emotion-0 emotion-1"
>
  <h1
    className="emotion-2 emotion-3"
  >
    Edit
  </h1>
  <form
    className="emotion-4 emotion-5"
    onSubmit={[Function]}
  >
    <div
      className="emotion-6 emotion-7"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-10 emotion-11"
        >
          <label
            className="emotion-12 emotion-13"
            htmlFor="amount"
          >
            Amount
          </label>
        </div>
        <input
          autoFocus={true}
          className="form-control emotion-14 emotion-15"
          id="amount"
          inputMode="decimal"
          name="amount"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
      <button
        className="emotion-16 emotion-17"
        onClick={[Function]}
        tabIndex={-1}
        type="button"
      >
        <svg
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M12 19c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zM6 1c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12-8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm-6 8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
          />
        </svg>
      </button>
    </div>
    <div
      className="emotion-6 emotion-7"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-10 emotion-11"
        >
          <label
            className="emotion-12 emotion-13"
            htmlFor="description"
          >
            Description
          </label>
        </div>
        <input
          className="form-control emotion-14 emotion-15"
          id="description"
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
        />
      </div>
    </div>
    <div
      className="emotion-6 emotion-7"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-10 emotion-11"
        >
          <label
            className="emotion-12 emotion-13"
            htmlFor="tags"
          >
            Tags
          </label>
        </div>
        <div
          className="emotion-36"
          id="tags"
          onKeyDown={[Function]}
        >
          <div
            className="emotion-37"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="emotion-38"
            >
              <div
                className="emotion-39"
              >
                Select...
              </div>
              <div
                className="emotion-40"
              >
                <div
                  style={
                    Object {
                      "display": "inline-block",
                    }
                  }
                >
                  <input
                    aria-autocomplete="list"
                    autoCapitalize="none"
                    autoComplete="off"
                    autoCorrect="off"
                    disabled={false}
                    id="react-select-3-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    spellCheck="false"
                    style={
                      Object {
                        "background": 0,
                        "border": 0,
                        "boxSizing": "content-box",
                        "color": "inherit",
                        "fontSize": "inherit",
                        "label": "input",
                        "opacity": 1,
                        "outline": 0,
                        "padding": 0,
                        "width": "1px",
                      }
                    }
                    tabIndex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style={
                      Object {
                        "height": 0,
                        "left": 0,
                        "overflow": "scroll",
                        "position": "absolute",
                        "top": 0,
                        "visibility": "hidden",
                        "whiteSpace": "pre",
                      }
                    }
                  >
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              className="emotion-41"
            >
              <span
                className="emotion-42"
              />
              <div
                aria-hidden="true"
                className="emotion-43"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="emotion-44"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div>
            <input
              name="tags"
              type="hidden"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-6 emotion-7"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <div
          className="emotion-10 emotion-11"
        >
          <label
            className="emotion-12 emotion-13"
            htmlFor="date"
          >
            Date
          </label>
        </div>
        <input
          className="form-control emotion-14 emotion-15"
          id="date"
          name="date"
          onBlur={[Function]}
          onChange={[Function]}
          type="datetime-local"
        />
      </div>
    </div>
    <footer
      className="emotion-55 emotion-56"
    >
      <div
        className="emotion-57 emotion-58"
      >
        <a
          className="emotion-59 emotion-60"
          onClick={[Function]}
        >
          Delete
        </a>
        <button
          className="emotion-61 emotion-62 emotion-63"
        >
          Submit
          <div
            className="emotion-64 emotion-65"
          />
        </button>
      </div>
    </footer>
  </form>
</div>
`;
